--- a/chronic-kidney-diseases.html
+++ b/chronic-kidney-diseases.html
@@ -356,19 +356,24 @@
                     </ul>
                 </div>
                 <div class="col-md-3">
-                    <h6 class="text-white">Hours</h6>
+                    <h6 class="text-white">Meeting Hours</h6>
                     <ul class="list-unstyled small">
                         <li>Mon–Fri: 09:00–20:00</li>
-                        <li>Sat: 10:00–18:00</li>
-                        <li>Sun: Closed</li>
+                        <li>Sat-Sun: Closed</li>
                     </ul>
                     <div class="d-flex gap-2">
                         <a class="btn btn-sm btn-outline-light" href="#" aria-label="WhatsApp"><i
                                 class="bi bi-whatsapp"></i></a>
                         <a class="btn btn-sm btn-outline-light" href="#" aria-label="Facebook"><i
                                 class="bi bi-facebook"></i></a>
+                        <a class="btn btn-sm btn-outline-light" href="#" aria-label="twitter"><i
+                                class="bi bi-twitter"></i></a>
+                        <a class="btn btn-sm btn-outline-light" href="#" aria-label="linkedin"><i
+                                class="bi bi-linkedin"></i></a>
                         <a class="btn btn-sm btn-outline-light" href="#" aria-label="Instagram"><i
                                 class="bi bi-instagram"></i></a>
+                        <a class="btn btn-sm btn-outline-light" href="#" aria-label="youtube"><i
+                                class="bi bi-youtube"></i></a>
                     </div>
                 </div>
             </div>
