--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    
+
     <nav class="navbar navbar-expand-lg py-3 fixed-top bg-light">
         <div class="container d-flex justify-content-between align-items-center">
 
@@ -53,12 +53,14 @@
                         <ul class="dropdown-menu fade-down shadow" aria-labelledby="servicesDropdown">
                             <li><a class="dropdown-item" href="kidneydiseases.html">Kidney Diseases</a></li>
                             <li><a class="dropdown-item" href="acutekidneyinjury.html">Acute Kidney Injury</a></li>
-                            <li><a class="dropdown-item" href="chronic-kidney-diseases.html">Chronic Kidney Disease</a></li>
+                            <li><a class="dropdown-item" href="chronic-kidney-diseases.html">Chronic Kidney Disease</a>
+                            </li>
                             <li><a class="dropdown-item" href="dialysis.html">Dialysis</a></li>
                             <li><a class="dropdown-item" href="nephritic_syndrome.html">Nephritic Syndrome</a></li>
                             <li><a class="dropdown-item" href="nephrotic_syndrome.html">Nephritoc Syndrome</a></li>
                             <li><a class="dropdown-item" href="renal_biopsy.html">Renal (Kidney) Biopsy</a></li>
-                            <li><a class="dropdown-item" href="kidney_transplant.html">Renal (Kidney) Transplant</a></li>
+                            <li><a class="dropdown-item" href="kidney_transplant.html">Renal (Kidney) Transplant</a>
+                            </li>
                         </ul>
                     </li>
 
@@ -145,15 +147,22 @@
                 <div class="col-lg-7">
                     <div class="about-card p-4 p-lg-5 reveal delay-1">
                         <p class="mb-3">
-                           Dr. Jitendra Kumar - The Chairman of Department of Renal Sciences & Transplant Medicine and President Delhi Nephrology Society. Dr. Jitendra Kumar has contributed considerably in his chosen field of Nephrology and Kidney Transplant Surgery, both as a clinician and as a teacher.
+                            Dr. Jitendra Kumar - The Chairman of Department of Renal Sciences & Transplant Medicine and
+                            President Delhi Nephrology Society. Dr. Jitendra Kumar has contributed considerably in his
+                            chosen field of Nephrology and Kidney Transplant Surgery, both as a clinician and as a
+                            teacher.
                         </p>
                         <ul class="check-list">
-                            <li><i class="bi bi-check2-circle"></i> In India with limited transplant access due to a lack of suitable donors, lots of people are put on regular hemodialysis.</li>
-                            <li><i class="bi bi-check2-circle"></i> Jitendra Kumar has specialized in providing quality dialysis, in order to rehabilitate patients with kidney failure.</li>
+                            <li><i class="bi bi-check2-circle"></i> In India with limited transplant access due to a
+                                lack of suitable donors, lots of people are put on regular hemodialysis.</li>
+                            <li><i class="bi bi-check2-circle"></i> Jitendra Kumar has specialized in providing quality
+                                dialysis, in order to rehabilitate patients with kidney failure.</li>
                             <li><i class="bi bi-check2-circle"></i> He is specialized in all forms of dialysis.</li>
-                            <li><i class="bi bi-check2-circle"></i> Through his various community outreach program, he has worked hard for early diagnosis & management of CKD to retard its progression.</li>
+                            <li><i class="bi bi-check2-circle"></i> Through his various community outreach program, he
+                                has worked hard for early diagnosis & management of CKD to retard its progression.</li>
                         </ul>
-                        <p>He completed DM (Nephrology) from the Sanjay Gandhi Graduate Institute of Medical Sciences, Lucknow. Practices at Accord superspeciality hospital as chairman renal sciences.</p>
+                        <p>He completed DM (Nephrology) from the Sanjay Gandhi Graduate Institute of Medical Sciences,
+                            Lucknow. Practices at Accord superspeciality hospital as chairman renal sciences.</p>
                         <div class="d-flex gap-2 mt-3">
                             <a class="btn btn-cta" href="#education">View Education</a>
                             <a class="btn btn-ghost" href="#experience">Experience</a>
@@ -165,10 +174,29 @@
             <div class="row mt-4">
                 <div class="col-lg-12">
                     <p class="muted reveal delay-2">
-                        Dr Jitendra graduated from Patna Medical College ( Previously Known as Prince of Wales Medical College) in 1992. He got his MD ( Medicine) from same medical college in 1997. He later passed Diplomat of National Board Examination in General Medicine.After clearing Union Public Service Exam he joined Indian Railways.This gave him great experience in dealing with rural population and disaster management. Realizing paucity of Nephrologist, he resigned from the job and after clearing a tough examination , got a DM (doctoral) seat in Sanjay Gandhi Post Graduate Institute of Medical Sciences Lucknow. During that time there were less than 20 seats in DM nephrology in entire India. During 1999 to 2002 as a DM trainee Dr Jitendra participated in several research projects some of them got published in peer reviewed indexed journals.
+                        Dr Jitendra graduated from Patna Medical College ( Previously Known as Prince of Wales Medical
+                        College) in 1992. He got his MD ( Medicine) from same medical college in 1997. He later passed
+                        Diplomat of National Board Examination in General Medicine.After clearing Union Public Service
+                        Exam he joined Indian Railways.This gave him great experience in dealing with rural population
+                        and disaster management. Realizing paucity of Nephrologist, he resigned from the job and after
+                        clearing a tough examination , got a DM (doctoral) seat in Sanjay Gandhi Post Graduate Institute
+                        of Medical Sciences Lucknow. During that time there were less than 20 seats in DM nephrology in
+                        entire India. During 1999 to 2002 as a DM trainee Dr Jitendra participated in several research
+                        projects some of them got published in peer reviewed indexed journals.
                     </p>
-                    <p>Later in 2003 Jan he joined Nagaruna Hospital Vijaywada and developed a dialysis unit & by the end of the year he shifted to Delhi region and joined Escorts Hospital Faridabad as head of nephrology. His tenure continued as Fortis hospital took over the management. Experience gained as a corporate employee was tremendous. Especially to keep the delicate balance between compulsions and limitations of a private facility and larger social responsibility of treating patients who may not be that affording.A decade of dedicated nephrology care followed by educating masses through, CME ,lectures,public education programs, medical camps and other resources. Currently Dr Jitendra is working as director of Nephrology and Transplant Medicine at Asian Institute of Medical Sciences Faridabad.</p>
-                    <p>He has the honour of bringing various procedures for the first time in Faridabad, such as CRRT, hemoperfusion,CAPD and Kidney transplant.His academic pursuit continues as he is regularly invited as faculty for various regional and national nephrology and dialysis forums. He teaches Medicine in Manav Rachna University. His concept- Life is beautiful even if kidney fails.</p>
+                    <p>Later in 2003 Jan he joined Nagaruna Hospital Vijaywada and developed a dialysis unit & by the
+                        end of the year he shifted to Delhi region and joined Escorts Hospital Faridabad as head of
+                        nephrology. His tenure continued as Fortis hospital took over the management. Experience gained
+                        as a corporate employee was tremendous. Especially to keep the delicate balance between
+                        compulsions and limitations of a private facility and larger social responsibility of treating
+                        patients who may not be that affording.A decade of dedicated nephrology care followed by
+                        educating masses through, CME ,lectures,public education programs, medical camps and other
+                        resources. Currently Dr Jitendra is working as director of Nephrology and Transplant Medicine at
+                        Asian Institute of Medical Sciences Faridabad.</p>
+                    <p>He has the honour of bringing various procedures for the first time in Faridabad, such as CRRT,
+                        hemoperfusion,CAPD and Kidney transplant.His academic pursuit continues as he is regularly
+                        invited as faculty for various regional and national nephrology and dialysis forums. He teaches
+                        Medicine in Manav Rachna University. His concept- Life is beautiful even if kidney fails.</p>
                 </div>
             </div>
         </div>
@@ -261,8 +289,8 @@
             </div>
 
             <div class="text-center mt-4">
-                <a class="btn btn-cta" href="#">Book Appointment</a>
-                <a class="btn btn-ghost ms-2" href="#">Contact</a>
+                <a class="btn btn-cta" href="contact.html">Book Appointment</a>
+                <!-- <a class="btn btn-ghost ms-2" href="#">Contact</a> -->
             </div>
         </div>
     </section>
@@ -272,7 +300,7 @@
             <div class="row g-4">
                 <div class="col-md-4">
                     <div class="d-flex align-items-center gap-2 mb-3">
-                        <a class="navbar-brand fw-bold d-flex align-items-center" href="#top"
+                        <a class="navbar-brand fw-bold d-flex align-items-center" href="index.html"
                             aria-label="Kidney Care Home">
                             <img src="images/Logo.png" alt="Dr Jitendra Kumar Logo"
                                 class="img-fluid border rounded bg-white p-1" style="max-height: 60px;">
@@ -291,9 +319,9 @@
                     <ul class="list-unstyled small">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About</a></li>
-                        <li><a href="#news">News</a></li>
-                        <li><a href="#blogs">Blogs</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="news.html">News</a></li>
+                        <li><a href="blogs.html">Blogs</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3">
@@ -301,7 +329,7 @@
                     <ul class="list-unstyled small">
                         <li><a href="kidneydiseases.html">Kidney Diseases</a></li>
                         <li><a href="acute_kidney_injury.html">Acute Kidney Injury</a></li>
-                        <li><a href="chronic-kidney-diseases.html">Chronic Kidney Disease</a></li>
+                        <li><a href="chronic-kidney-diseases.html">Chronic Kidney Diseases</a></li>
                         <li><a href="dialysis.html">Dialysis</a></li>
                         <li><a href="nephritic_syndrome.html">Nephritic Syndrome</a></li>
                         <li><a href="nephrotic_syndrome.html">Nephrotic Syndrome</a></li>
@@ -310,19 +338,24 @@
                     </ul>
                 </div>
                 <div class="col-md-3">
-                    <h6 class="text-white">Hours</h6>
+                    <h6 class="text-white">Meeting Hours</h6>
                     <ul class="list-unstyled small">
                         <li>Mon–Fri: 09:00–20:00</li>
-                        <li>Sat: 10:00–18:00</li>
-                        <li>Sun: Closed</li>
+                        <li>Sat-Sun: Closed</li>
                     </ul>
                     <div class="d-flex gap-2">
                         <a class="btn btn-sm btn-outline-light" href="#" aria-label="WhatsApp"><i
                                 class="bi bi-whatsapp"></i></a>
                         <a class="btn btn-sm btn-outline-light" href="#" aria-label="Facebook"><i
                                 class="bi bi-facebook"></i></a>
+                        <a class="btn btn-sm btn-outline-light" href="#" aria-label="twitter"><i
+                                class="bi bi-twitter"></i></a>
+                        <a class="btn btn-sm btn-outline-light" href="#" aria-label="linkedin"><i
+                                class="bi bi-linkedin"></i></a>
                         <a class="btn btn-sm btn-outline-light" href="#" aria-label="Instagram"><i
                                 class="bi bi-instagram"></i></a>
+                        <a class="btn btn-sm btn-outline-light" href="#" aria-label="youtube"><i
+                                class="bi bi-youtube"></i></a>
                     </div>
                 </div>
             </div>
@@ -334,7 +367,6 @@
             </div>
         </div>
     </footer>
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
@@ -359,4 +391,4 @@
     </script>
 </body>
 
-</html
+</html>
