--- a/index.html
+++ b/index.html
@@ -80,25 +80,25 @@
 
                     <!-- Gallery Dropdown -->
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle fw-medium" href="#" id="galleryDropdown" role="button"
+                        <a class="nav-link dropdown-toggle fw-medium" href="javaScript:void(0)" id="galleryDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Gallery
                         </a>
                         <ul class="dropdown-menu fade-down shadow" aria-labelledby="galleryDropdown">
-                            <li><a class="dropdown-item" href="#photos">Photo Gallery</a></li>
-                            <li><a class="dropdown-item" href="#videos">Video Gallery</a></li>
+                            <li><a class="dropdown-item" href="photo-gallery.html">Photo Gallery</a></li>
+                            <li><a class="dropdown-item" href="video-gallery.html">Video Gallery</a></li>
                         </ul>
                     </li>
 
-                    <li class="nav-item"><a class="nav-link fw-medium" href="#news">News</a></li>
-                    <li class="nav-item"><a class="nav-link fw-medium" href="#blogs">Blogs</a></li>
-                    <li class="nav-item"><a class="nav-link fw-medium" href="#contact">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link fw-medium" href="news.html">News</a></li>
+                    <li class="nav-item"><a class="nav-link fw-medium" href="blogs.html">Blogs</a></li>
+                    <li class="nav-item"><a class="nav-link fw-medium" href="contact.html">Contact</a></li>
 
                 </ul>
             </div>
 
             <!-- Book Appointment Button -->
-            <a class="btn btn-cta text-white px-4 py-2" href="#contact">Book Appointment</a>
+            <a class="btn btn-cta text-white px-4 py-2" href="contact.html">Book Appointment</a>
 
         </div>
     </nav>
@@ -115,7 +115,7 @@
                         Start taking proactive steps today.
                     </p>
                     <div class="d-flex flex-wrap gap-2 onload-fade">
-                        <a href="#contact" class="btn btn-primary px-4 py-2"><i
+                        <a href="contact.html" class="btn btn-primary px-4 py-2"><i
                                 class="bi bi-telephone-outbound me-2"></i>Consult Now</a>
                         <a href="#services" class="btn btn-outline-secondary px-4 py-2">Explore Services</a>
                     </div>
@@ -170,7 +170,7 @@
                         <span class="badge text-bg-light border"><i class="bi bi-hospital-fill text-danger me-1"></i>
                             Leading Hospitals</span>
                     </div> -->
-                    <a class="btn btn-accent mt-4" href="#contact"><i class="bi bi-chat-dots-fill me-1"></i> Know
+                    <a class="btn btn-accent mt-4" href="about.html"><i class="bi bi-chat-dots-fill me-1"></i> Know
                         More</a>
                 </div>
             </div>
@@ -194,7 +194,7 @@
                         <h5 class="fw-semibold">Chronic Kidney Diseases</h5>
                         <p class="text-secondary mb-3">Early detection, risk control, and long‑term management for CKD
                             across all stages.</p>
-                        <a class="btn btn-outline-secondary btn-sm" href="#contact">Read More</a>
+                        <a class="btn btn-outline-secondary btn-sm" href="chronic-kidney-diseases.html">Read More</a>
                     </div>
                 </div>
                 <div class="col-md-4" data-animate="zoom">
@@ -203,7 +203,7 @@
                         <h5 class="fw-semibold">Dialysis</h5>
                         <p class="text-secondary mb-3">Safe, compassionate hemodialysis and peritoneal dialysis with
                             infection‑prevention protocols.</p>
-                        <a class="btn btn-outline-secondary btn-sm" href="#contact">Read More</a>
+                        <a class="btn btn-outline-secondary btn-sm" href="dialysis.html">Read More</a>
                     </div>
                 </div>
                 <div class="col-md-4" data-animate="zoom">
@@ -212,7 +212,7 @@
                         <h5 class="fw-semibold">Nephritic Syndrome</h5>
                         <p class="text-secondary mb-3">Accurate diagnosis and evidence‑based treatment plans for
                             nephritic syndromes.</p>
-                        <a class="btn btn-outline-secondary btn-sm" href="#contact">Read More</a>
+                        <a class="btn btn-outline-secondary btn-sm" href="nephritic_syndrome.html">Read More</a>
                     </div>
                 </div>
             </div>
@@ -227,7 +227,7 @@
                     <h2 class="section-title">Is Your <span style="color:var(--accent)">Kidney</span> In Danger?</h2>
                     <p class="lead lead-max">Look out for these common symptoms. Early consultation helps prevent
                         complications.</p>
-                    <a class="btn btn-primary mt-2" href="#contact">Get Checked</a>
+                    <a class="btn btn-primary mt-2" href="contact.html">Get Checked</a>
                 </div>
                 <div class="col-lg-7">
                     <div class="row g-3">
@@ -385,7 +385,7 @@
                     <p class="lead lead-max" style="color:#b9c3d7">
                         Our patients consistently trust our clear advice, compassionate care, and proven outcomes.
                     </p>
-                    <a href="#contact" class="btn btn-accent mt-2"><i class="bi bi-lightning-charge-fill me-1"></i>
+                    <a href="contact.html" class="btn btn-accent mt-2"><i class="bi bi-lightning-charge-fill me-1"></i>
                         Instant Appointment</a>
                 </div>
                 <div class="col-lg-6">
@@ -431,7 +431,7 @@
                         <p class="text-secondary mb-0">Get the right advice from experienced super-specialists.</p>
                     </div>
                     <div class="col-lg-auto">
-                        <a href="tel:+910000000000" class="btn btn-primary px-4 me-2"><i
+                        <a href="tel:+918178019467" class="btn btn-primary px-4 me-2"><i
                                 class="bi bi-telephone me-2"></i>Call</a>
                         <a href="mailto:info@example.com" class="btn btn-outline-secondary px-4"><i
                                 class="bi bi-envelope me-2"></i>Email</a>
@@ -447,7 +447,7 @@
             <div class="row g-4">
                 <div class="col-md-4">
                     <div class="d-flex align-items-center gap-2 mb-3">
-                        <a class="navbar-brand fw-bold d-flex align-items-center" href="#top"
+                        <a class="navbar-brand fw-bold d-flex align-items-center" href="index.html"
                             aria-label="Kidney Care Home">
                             <img src="images/Logo.png" alt="Dr Jitendra Kumar Logo"
                                 class="img-fluid border rounded bg-white p-1" style="max-height: 60px;">
@@ -466,9 +466,9 @@
                     <ul class="list-unstyled small">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About</a></li>
-                        <li><a href="#news">News</a></li>
-                        <li><a href="#blogs">Blogs</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="news.html">News</a></li>
+                        <li><a href="blogs.html">Blogs</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3">
@@ -485,19 +485,24 @@
                     </ul>
                 </div>
                 <div class="col-md-3">
-                    <h6 class="text-white">Hours</h6>
+                    <h6 class="text-white">Meeting Hours</h6>
                     <ul class="list-unstyled small">
                         <li>Mon–Fri: 09:00–20:00</li>
-                        <li>Sat: 10:00–18:00</li>
-                        <li>Sun: Closed</li>
+                        <li>Sat-Sun: Closed</li>
                     </ul>
                     <div class="d-flex gap-2">
                         <a class="btn btn-sm btn-outline-light" href="#" aria-label="WhatsApp"><i
                                 class="bi bi-whatsapp"></i></a>
                         <a class="btn btn-sm btn-outline-light" href="#" aria-label="Facebook"><i
                                 class="bi bi-facebook"></i></a>
+                        <a class="btn btn-sm btn-outline-light" href="#" aria-label="twitter"><i
+                                class="bi bi-twitter"></i></a>
+                        <a class="btn btn-sm btn-outline-light" href="#" aria-label="linkedin"><i
+                                class="bi bi-linkedin"></i></a>
                         <a class="btn btn-sm btn-outline-light" href="#" aria-label="Instagram"><i
                                 class="bi bi-instagram"></i></a>
+                        <a class="btn btn-sm btn-outline-light" href="#" aria-label="youtube"><i
+                                class="bi bi-youtube"></i></a>
                     </div>
                 </div>
             </div>
