--- a/isot.html
+++ b/isot.html
@@ -291,10 +291,10 @@
             <div class="row g-4">
                 <div class="col-md-4">
                     <div class="d-flex align-items-center gap-2 mb-3">
-                        <a class="navbar-brand fw-bold d-flex align-items-center" href="#top"
+                        <a class="navbar-brand fw-bold d-flex align-items-center" href="index.html"
                             aria-label="Kidney Care Home">
                             <img src="images/Logo.png" alt="Dr Jitendra Kumar Logo"
-                                class="img-fluid border rounded bg-white p-1" style="max-height: 60px" />
+                                class="img-fluid border rounded bg-white p-1" style="max-height: 60px;">
                         </a>
                     </div>
                     <p class="mb-2">Dr. Jitendra Kumar</p>
@@ -310,9 +310,9 @@
                     <ul class="list-unstyled small">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About</a></li>
-                        <li><a href="#news">News</a></li>
-                        <li><a href="#blogs">Blogs</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="news.html">News</a></li>
+                        <li><a href="blogs.html">Blogs</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3">
@@ -329,27 +329,31 @@
                     </ul>
                 </div>
                 <div class="col-md-3">
-                    <h6 class="text-white">Hours</h6>
+                    <h6 class="text-white">Meeting Hours</h6>
                     <ul class="list-unstyled small">
                         <li>Mon–Fri: 09:00–20:00</li>
-                        <li>Sat: 10:00–18:00</li>
-                        <li>Sun: Closed</li>
+                        <li>Sat-Sun: Closed</li>
                     </ul>
                     <div class="d-flex gap-2">
                         <a class="btn btn-sm btn-outline-light" href="#" aria-label="WhatsApp"><i
                                 class="bi bi-whatsapp"></i></a>
                         <a class="btn btn-sm btn-outline-light" href="#" aria-label="Facebook"><i
                                 class="bi bi-facebook"></i></a>
+                        <a class="btn btn-sm btn-outline-light" href="#" aria-label="twitter"><i
+                                class="bi bi-twitter"></i></a>
+                        <a class="btn btn-sm btn-outline-light" href="#" aria-label="linkedin"><i
+                                class="bi bi-linkedin"></i></a>
                         <a class="btn btn-sm btn-outline-light" href="#" aria-label="Instagram"><i
                                 class="bi bi-instagram"></i></a>
+                        <a class="btn btn-sm btn-outline-light" href="#" aria-label="youtube"><i
+                                class="bi bi-youtube"></i></a>
                     </div>
                 </div>
             </div>
-            <hr class="border-secondary my-4" />
+            <hr class="border-secondary my-4">
             <div class="d-flex justify-content-center pb-4 small">
-                <span>
-                    © Copyright All rights reserved 2025. Designed &amp; Developed by
-                    <a class="text-decoration-none" href="https://brandingwaale.com/">Brandingwaale Webtech</a>
+                <span>© Copyright All rights reserved 2025. Designed & Developed by
+                    <a class="text-decoration-none" href="https://brandingwaale.com/"> Brandingwaale Webtech</a>
                 </span>
             </div>
         </div>
