--- a/about.html
+++ b/about.html
@@ -167,10 +167,10 @@
                         </ul>
                         <p>He completed DM (Nephrology) from the Sanjay Gandhi Graduate Institute of Medical Sciences,
                             Lucknow. Practices at Accord superspeciality hospital as chairman renal sciences.</p>
-                        <div class="d-flex gap-2 mt-3">
+                        <!-- <div class="d-flex gap-2 mt-3">
                             <a class="btn btn-cta" href="#education">View Education</a>
                             <a class="btn btn-ghost" href="#experience">Experience</a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
